Fix responsive design for larger media queries, Add list name truncation

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,7 @@
 /* --- // --- // WIDTHS // --- // --- */
 
-$width-lg: 70%;
+$width-xl: 50%;
+$width-lg: 65%;
 $width-md: 80%;
 $width-sm: 90%;
 
