--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,11 +24,28 @@ body {
 
 /* --- // --- // MEDIA QUERIES // --- // --- */
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1201px) {
+    .container {
+        width: $width-xl;
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
     .container {
         width: $width-lg;
         display: grid;
         grid-template-columns: 30% 70%;
+    }
+}
+
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .container {
+        width: $width-md;
+        display: grid;
+        grid-template-columns: 35% 65%;
     }
 }
 
