--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -162,7 +162,7 @@
 
 @media screen and (max-width: 480px) {
     .tasks {
-        margin: 5em 0.5em;
+        margin: 2em 0.5em;
 
         &__menu {
             &-msg {
